bin/tests/snapshots/shellcheck__844d2aeac4fa3c06a29504bcf3a14e30_lint_errfmt.snap
---
source: bin/tests/shellcheck.rs
---
{ tasks."a:b".exec = ''
  read name
  export VERSION=$(${pkgs.git}/bin/git describe)
  echo "$name $VERSION"
''; }
---
<temp_file_path>>2:3:W:28:[shellcheck] SC2162: read without -r will mangle backslashes.
<temp_file_path>>3:10:W:28:[shellcheck] SC2155: Declare and assign separately to avoid masking return values.
