bin/tests/snapshots/shellcheck__9fd0c955b337c26a99a91978c868c7fb_fix.snap
---
source: bin/tests/shellcheck.rs
---
{ processes.web.exec = "cd $HOME && serve"; }
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-{ processes.web.exec = "cd $HOME && serve"; }
+{ processes.web.exec = "cd \"$HOME\" && serve"; }
