bin/tests/snapshots/shellcheck__9fd0c955b337c26a99a91978c868c7fb_lint_errfmt.snap
---
source: bin/tests/shellcheck.rs
---
{ processes.web.exec = "cd $HOME && serve"; }
---
<temp_file_path>>1:28:I:28:[shellcheck] SC2086: Double quote to prevent globbing and word splitting.
