bin/tests/snapshots/shellcheck__9fd0c955b337c26a99a91978c868c7fb_lint_stderr.snap
---
source: bin/tests/shellcheck.rs
---
{ processes.web.exec = "cd $HOME && serve"; }
---
[shellcheck] Advice: ShellCheck found issues in an inline shell script
   ╭─[ <temp_file_path>:1:28 ]
   │
 1 │ { processes.web.exec = "cd $HOME && serve"; }
   │                            ──┬──  
   │                              ╰──── SC2086: Double quote to prevent globbing and word splitting.
───╯
